Warrior guild related content.  Added news about them to the front page and added a section  and subpage for them in the guilds folder.

--- a/guilds/index.html
+++ b/guilds/index.html
@@ -143,7 +143,9 @@ href="/cgi-bin/help.pl?topics">help file</a> for the guild.
     <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
     <a href="bodyguard.html">Bodyguards</a><br />
     <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
-    <a href="swordsman.html">Swordsmen</a></p>
+    <a href="swordsman.html">Swordsmen</a><br />
+    <img src="/img/clr.gif" alt="" width="1" height="1" hspace="50" />
+    <a href="warrior.html">Warriors</a></p>
   </td>
 </tr>
 
