--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@ Please vote only once per day.</p>
 
 <table border="0" cellpadding="5" cellspacing="0"><tr><td bgcolor="#000000">
 <p class="ss8w"><font color="#EFEFEF" face="verdana,arial,helvetica,geneva" size="1">
+8/7/20: The <a href="/guilds/warrior.html">Warrior specialization</a> of fighters guild was added. Find their headquarters in Entesia. 
+</font></p>
+<p class="ss8w"><font color="#EFEFEF" face="verdana,arial,helvetica,geneva" size="1">
 2/9/17: An Eotl alumni was involved in curating an exhibition on World of Warcraft 
 and <a href="http://www.computerhistory.org/makesoftware/exhibit/world-of-warcraft/#aca6de47b5388f7631038420361a8d32">
 mentions</a> the mud as a forerunner along with a screenshot.</font></p>
