Corrected background colour for the hit counter

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ Connector</font></a>'s March&#160;1998 Mud of the Month!</font></p>
   <td align="center" bgcolor="#000000">
 
   <table border="1" cellpadding="10" cellspacing="0"><tr>
-    <td align="center" bgcolor="#B885B0">
+    <td align="center" bgcolor="#ab73a6">
 <p><img src="/cgi-bin/visitor/muddicts.pl" alt="" width="65" height="20" /><br />
 Muddicts<br />
 and<br />
