More warrior changes.
Forgot to add the spec to list of specs on the fighter page.

--- a/guilds/fighter.html
+++ b/guilds/fighter.html
@@ -57,6 +57,7 @@
   <li> <a href="berserker.html">Berserkers</a></li>
   <li> <a href="bodyguard.html">Bodyguards</a></li>
   <li> <a href="swordsman.html"> Swordsmen</a></li>
+  <li> <a href="warrior.html">Warriors</a></li>
 </ul>
 
 <h5 class="hsep">Guild Titles</h5>
